<resources>
    <string name="app_name" translatable="false">Smart QRcode &amp; Barcode</string>
    <string name="qr_code">QR code</string>
    <string name="bar_code">Barcode </string>
    <string name="popular_templates">Popular Templates</string>
    <string name="qr_create">QR Create</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="text">Text</string>
    <string name="wifi">WiFi</string>
    <string name="x">X</string>
    <string name="facebook">Facebook</string>
    <string name="ins">Instagram</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="enter_url">Enter URL</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="www">www.</string>
    <string name="com">.com</string>
    <string name="create">Create</string>
    <string name="wifi_name">Wi-fi Name</string>
    <string name="password">Password</string>
    <string name="please_enter">Please Enter </string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="birthday">Birthday</string>
    <string name="please_enter_text">Please enter text… </string>
    <string name="barcode_itf">ITF</string>
    <string name="barcode_codabar">Codabar</string>
    <string name="barcode_code_39">Code 39</string>
    <string name="barcode_code_93">Code 93</string>
    <string name="barcode_code_128">Code 128</string>
    <string name="barcode_upc_a">UPC A</string>
    <string name="barcode_upc_e">UPC E</string>
    <string name="barcode_ean_8">EAN 8</string>
    <string name="barcode_ean_13">EAN 13</string>
    <string name="event_number">Even Number Of Digits</string>
    <string name="digits">Digits</string>
    <string name="uppercase_text_without_special_symbols">Uppercase Text Without Special Symbols</string>
    <string name="text_without_special_symbols">Text Without Special Symbols</string>
    <string name="upc_a_hint">11 Digits + 1 Checksum Digit</string>
    <string name="upc_e_hint">7 Digits + 1 Checksum Digit</string>
    <string name="ean_8_hint">8 Digits</string>
    <string name="ean_13_hint">12 Digits + 1 Checksum Digit</string>
    <string name="generated">Generated</string>
    <string name="scanned">Scanned</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="version_number">Version Number</string>
    <string name="ok">OK</string>
    <string name="generate_results">Generate results</string>
    <string name="save">Save</string>
    <string name="style">Style</string>
    <string name="open">Open</string>
    <string name="scan_results">Scan results</string>
    <string name="qrcode_value">%1$s · QR Code</string>
    <string name="barcode_value">%1$s · BarCode</string>
    <string name="data_is_empty">Content cannot be empty</string>
    <string name="name_is_empty">Name cannot be empty</string>
    <string name="phone_is_empty">Phone number cannot be empty</string>
    <string name="phone_invalidate">Invalid phone number format</string>
    <string name="email_invalidate">Invalid email format</string>
    <string name="wifi_invalidate">Wi-Fi name cannot be empty</string>
    <string name="url_not_empty">URL cannot be empty</string>
    <string name="url_invalidate">Invalid URL format</string>
    <string name="whatsapp_invalidate">Invalid WhatsApp phone number</string>
    <string name="x_invalidate">Invalid X link format</string>
    <string name="ins_invalidate">Invalid Instagram link format</string>
    <string name="facebook_invalidate">Invalid Facebook link format</string>
    <string name="data_invalidate">Format does not match</string>
    <string name="create_type">Create Type</string>
    <string name="share">Share</string>
    <string name="copied">Copied!</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="cancel">Cancel</string>
    <string name="go_set">Go to Settings</string>
    <string name="set_open_camera_hint">Camera permission is permanently denied, please enable it manually in settings</string>
    <string name="set_open_storage_hint">Storage permission is permanently denied, please enable it manually in settings</string>
    <string name="scan_failed">Scan Failed</string>
    <string name="select_picture">Select Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_content">No content</string>
    <string name="tips">Tips</string>
    <string name="delete_data_content">Do you want to delete this data?</string>
    <string name="share_max_limit">A maximum of 8 data can be shared</string>
    <string name="auto">Auto</string>
    <string name="view">View</string>
    <string name="scan">Scan</string>
    <string name="qr_code_dialog_hint">Your exclusive video recommendation has been updated! Click to watch</string>
    <string name="parsing_qr_code">Parsing QR code…</string>
    <string name="post_content">Afraid of missing a video? Turn on notifications and never miss any exciting videos.</string>
    <string name="allow">Allow</string>
    <string name="please_url">Please enter the link</string>
    <string name="please_phone_number">Please enter the phone number</string>
    <string name="loading">Loading…</string>
</resources>