<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="240dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <!-- Wi-Fi Name 输入框 -->
    <LinearLayout
        android:id="@+id/layout_wifi_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/wifi_name"
            android:textColor="#0E0E0E"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/please_enter"
            android:padding="0dp"
            android:textColor="#222222"
            android:textColorHint="#D3D3D3"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Password 输入框 -->
    <LinearLayout
        android:id="@+id/layout_wifi_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_wifi_name">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/password"
            android:textColor="#0E0E0E"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_wifi_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:hint="@string/please_enter"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textColor="#222222"
            android:textColorHint="#D3D3D3"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/iv_eye"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:padding="10dp"
            android:src="@mipmap/ic_eye_close" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>